Update basic definition list

--- a/BasicDL.html
+++ b/BasicDL.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BasicDL.html</title>
 </head>
-
+<!-- dl= definition list, dt= definition term, dd= definition data -->
 <body>
     <h1>Basic Definition Lists</h1>
     <h2>Common Web Browsers</h2>
