--- a/tableSpan.html
+++ b/tableSpan.html
@@ -41,7 +41,7 @@
             <td>Train Minions</td>
             <td>Train Minions</td>
             <td>Train Minionsr</td>
-            <td rowspan="2">Train Minions</td>
+            <td rowspan="2">World Domination</td>
         </tr>
         <tr>
             <th>Evening</th>
