First File Commit

--- a/myFirst.html
+++ b/myFirst.html
@@ -1,12 +1,21 @@
-<DOCTYPE HTML>
-    <html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <!--myFirst.html -->
-    <title>My very firs web page!</title>
-    </head>
-    <body>
-        <h1>This is my firs web page!</h1>
-        <p>This is the first web page I've ever made, and I'm extremely proud of it. It is so cool!</p>
-        
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Very First Web Page</title>
+</head>
+
+<body>
+    <h1>This is my first web page!</h1>
+
+    <p>
+        This is the first web page I've ever made,
+        and I'm extremely proud of it.
+        It is so cool!
+    </p>
+</body>
+
+</html>
