Added Comment to Header

--- a/myFirst.html
+++ b/myFirst.html
@@ -5,16 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Very First Web Page</title>
+    <!-- myFirst.html -->
+    <title>First Web Page</title>
 </head>
 
 <body>
-    <h1>This is my first web page!</h1>
+    <h1>First Web Page</h1>
 
     <p>
-        This is the first web page I've ever made,
-        and I'm extremely proud of it.
-        It is so cool!
+       This is the first file example for this book, not my first webpage. This chapter is going to be pretty basic.
     </p>
 </body>
 
