--- a/myFirst.html
+++ b/myFirst.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- myFirst.html -->
-    <title>First Web Page</title>
+    <title>First Example Web Page</title>
 </head>
 
 <body>
-    <h1>First Web Page</h1>
+    <h1>First Example Web Page</h1>
 
     <p>
-       This is the first file example for this book, not my first webpage. This chapter is going to be pretty basic.
+       This is the first file example for this book. This chapter is pretty basic.
     </p>
 </body>
 
